@@ -48,6 +48,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -422,8 +423,8 @@ public class TestMediaInspectionProcessor {
 
     private MediaImpl inspectMedia(long jobId, long mediaId, URI mediaUri, Map<String, String> mediaMetadata) {
         MediaImpl media = new MediaImpl(
-                mediaId, mediaUri.toString(), UriScheme.get(mediaUri), Paths.get(mediaUri), Collections.emptyMap(),
-                mediaMetadata, null);
+                mediaId, mediaUri.toString(), UriScheme.get(mediaUri), Paths.get(mediaUri),
+                Map.of(), mediaMetadata, List.of(), List.of(), null);
         Exchange exchange = setupExchange(jobId, media);
         _mediaInspectionProcessor.process(exchange);
 
