@@ -58,8 +58,8 @@ import spark.Spark;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 import static org.junit.Assert.assertEquals;
@@ -145,7 +145,7 @@ public class TestRemoteMediaProcessor {
 
         MediaImpl media = new MediaImpl(
                 mediaId, EXT_IMG, UriScheme.get(URI.create(EXT_IMG)), _tempFolder.newFile().toPath(),
-                Collections.emptyMap(), Collections.emptyMap(), null);
+                Map.of(), Map.of(), List.of(), List.of(), null);
 
         Exchange exchange = setupExchange(jobId, media);
         _remoteMediaProcessor.process(exchange);
@@ -168,8 +168,8 @@ public class TestRemoteMediaProcessor {
         long mediaId = 321;
 
         MediaImpl media = new MediaImpl(
-                mediaId, "https://www.mitre.org/"+UUID.randomUUID().toString(), UriScheme.HTTPS,
-                _tempFolder.newFile().toPath(), Collections.emptyMap(), Collections.emptyMap(), null);
+                mediaId, "https://www.mitre.org/" + UUID.randomUUID(), UriScheme.HTTPS,
+                _tempFolder.newFile().toPath(), Map.of(), Map.of(), List.of(), List.of(), null);
 
         Exchange exchange = setupExchange(jobId, media);
         _remoteMediaProcessor.process(exchange);
@@ -192,10 +192,11 @@ public class TestRemoteMediaProcessor {
         long mediaId2 = 458;
         ImmutableCollection<MediaImpl> media = ImmutableList.of(
                 new MediaImpl(mediaId1, "/some/local/path.jpg", UriScheme.FILE,
-                              Paths.get("/some/local/path.jpg"), Collections.emptyMap(), Collections.emptyMap(),
-                              null),
+                              Paths.get("/some/local/path.jpg"), Map.of(), Map.of(), List.of(),
+                              List.of(), null),
                 new MediaImpl(mediaId2, EXT_IMG, UriScheme.get(URI.create(EXT_IMG)),
-                              _tempFolder.newFile().toPath(), Collections.emptyMap(), Collections.emptyMap(), null));
+                              _tempFolder.newFile().toPath(), Map.of(), Map.of(), List.of(),
+                              List.of(),null));
 
         var job = mock(BatchJob.class);
         when(job.isCancelled())
